--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,17 @@
 
+.logo {
+  height: 75px;
+}
+
+.app_name {
+  font-family: "Kaushan Script", cursive;
+  color: #4f3eb2;
+}
+
+.hero {
+  width: 100%;
+  height: 85vh;
+  background-image: url("./assets/stockBackgroundPhoto.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
